tests/derive/ui/de/fail/missing_attribute.stderr
error: unit struct `B` requires at least one IRC attribute
 --> tests/derive/ui/de/fail/missing_attribute.rs:7:8
  |
7 | struct B;
  |        ^

error: enum `#[irc(...)]` requires a component attribute (`tag`, `tag_flag`, `source`, `param`, `trailing`, or `command`)
 --> tests/derive/ui/de/fail/missing_attribute.rs:9:10
  |
9 | #[derive(FromMessage)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromMessage` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `from_message` found for struct `String` in the current scope
 --> tests/derive/ui/de/fail/missing_attribute.rs:3:10
  |
3 | #[derive(FromMessage)]
  |          ^^^^^^^^^^^ function or associated item not found in `String`
  |
note: if you're trying to build a new `String` consider using one of the following associated functions:
      String::new
      String::with_capacity
      String::try_with_capacity
      String::from_utf8
      and $N others
 --> $RUST/alloc/src/string.rs
  |
  |     pub const fn new() -> String {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  |     pub fn with_capacity(capacity: usize) -> String {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  |     pub fn try_with_capacity(capacity: usize) -> Result<String, TryReserveError> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
  |     pub fn from_utf8(vec: Vec<u8>) -> Result<String, FromUtf8Error> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `FromMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
